fix: Adjust alignment of elements for improved layout

--- a/css/listings.css
+++ b/css/listings.css
@@ -14,8 +14,8 @@
 }
   
 .main-image img {
-    width: 100%;
-    max-width: 600px;
+    width: 50%;
+    max-width: 650px;
     border-radius: 8px;
 }
   
@@ -83,7 +83,17 @@ hr {
     display: flex;
     justify-content: space-between;
 }
-  
+
+.about-item {
+    display: flex;
+    flex-direction: column;
+}
+
+.product-specifics {
+    display: flex;
+    gap: 50px;
+}
+
 .buy-actions {
     display: flex;
     gap: 10px;
@@ -105,6 +115,18 @@ hr {
 .add-to-cart-btn {
     background-color: #3498db;
     color: white;
+}
+
+.peter-review {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.peter-review img {
+    width: 80px;
+    height: 80px;
+    border-radius: 50px;
 }
 
 /* side */
